# messaging-system

./: .example.env  .gitignore  Messaging system.postman_collection.json  Procfile  README.md  data.db  pyproject.toml  requirements.txt  run.py  setup.cfg  tables.sql
backend/: __init__.py  config.py  database.py
backend/api/: __init__.py  auth.py  errors.py  messages.py  users.py  utils.py
backend/auth/: __init__.py  auth.py  jwt_utils.py
backend/errors/: __init__.py  handlers.py
backend/models/: exceptions.py  mapper.py  messages.py  types_decorators.py  users.py
backend/schemas/: argumets.py  error.py  models.py  responses.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.js
frontend/src/components/form-input/: form-input.components.jsx
frontend/src/components/sign-in/: sign-in.component.jsx
frontend/src/pages/authentication/: auth.pages.jsx
messaging_system/: .example.env
messaging_system/backend/: __init__.py  config.py  database.py
messaging_system/backend/api/: __init__.py  messages.py  users.py
messaging_system/backend/models/: mapper.py  messages.py  users.py  validate.py
messaging_system/tests/: conftest.py
messaging_system/tests/api/: test_messages.py
messaging_system/tests/models/: test_mapper.py  test_messages.py  test_users.py
tests/: conftest.py  test_db.py
tests/api/: test_messages.py  test_users.py
tests/auth/: test_auth.py
tests/models/: test_mapper.py  test_messages.py  test_users.py  test_validation.py
