[tool.poetry]
name = "messaging-system"
version = "0.1.0"
description = "Exchange messages between users"
authors = ["Leonid"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
python-dotenv = "^0.13.0"
passlib = "^1.7.2"
bcrypt = "^3.1.7"
gunicorn = "^20.0.4"
flask-jwt-extended = "^3.24.1"
flask-sqlalchemy = "^2.4.3"
flask-marshmallow = "^0.13.0"
marshmallow-sqlalchemy = "^0.23.1"
webargs = "^6.1.0"
secure = "^0.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^19.10b0", allow-prereleases = true}
flake8 = "^3.8.2"
coverage = "^5.1"

[tool.black]
line-length = 100
target-version = ['py38']
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
  )/
)
'''

[tool.coverage.run]
branch = true
command_line = "-m pytest"
source = ["backend"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
